# charon

./: .gitignore  README.md  pyproject.toml
charon/: __init__.py  __main__.py
charon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
charon/capture/: __init__.py  backends.py  config.py  errors.py  normalize.py  raw.py  recorder.py
charon/cli/: __init__.py  main.py
charon/compare/: __init__.py  config.py  engine.py
charon/detect/: __init__.py  engine.py  input.py  rules.py
charon/model/: __init__.py  addressing.py  annotation.py  comparison.py  evidence.py  exceptions.py  exchange.py  finding.py  provenance.py  replay.py
charon/pipeline/: __init__.py  config.py  engine.py
charon/replay/: __init__.py  credential.py  engine.py  errors.py  httpx_transport.py  result.py  transport.py
charon/report/: __init__.py  builder.py  index.py  json_renderer.py  markdown.py  model.py
docs/: architecture.md  data-model.md  v1-scope.md
tests/capture/: conftest.py  test_backends.py  test_normalize.py  test_recorder.py
tests/cli/: test_main.py
tests/compare/: conftest.py  test_classify.py  test_engine.py
tests/detect/: conftest.py  test_engine.py  test_input.py  test_rules.py
tests/model/: conftest.py  test_addressing.py  test_annotation.py  test_artifacts.py  test_finding.py  test_provenance.py  test_traceability.py
tests/pipeline/: test_engine.py
tests/replay/: conftest.py  test_credential.py  test_engine.py  test_httpx_transport.py  test_result.py
tests/report/: conftest.py  test_builder.py  test_renderers.py
