[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "charon"
version = "0.0.0"
description = "Deterministic, evidence-driven authorization analysis (model layer)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["charon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
