[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "charon"
version = "0.0.0"
description = "Deterministic, evidence-driven authorization analysis (model layer)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.optional-dependencies]
replay = [
    "httpx>=0.27",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "mypy>=1.8",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["charon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["charon", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
files = ["charon", "tests"]

# pytest ships an inline py.typed marker, so its types resolve directly with
# no need for a blanket ignore_missing_imports. Keep strict checking on.
